<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:id="@+id/root_view"
              xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              tools:context="de.xappo.myrxjava.rxjava.RxJavaEmitSequentiallyActivity">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_create_date"
        android:text="@string/btn_create_date"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_rx_java_emit_sequentially"
        android:text="@string/btn_rx_java_emit_sequentially"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_rx_java_emit_sequentially_replay"
        android:text="@string/btn_rx_java_emit_sequentially_replay"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_close_all_new_tasks"
        android:text="@string/btn_close_all_new_tasks"/>



</LinearLayout>
