<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="de.xappo.myrxjava.rxjava.RxJavaEntryPointActivity">

    <Button
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/btn_go_to_rxjava_receive_activity"
        android:text="@string/btn_go_to_rxjava_receive_activity"/>

    <Button
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/btn_go_to_rxjava_async_basics_activity"
        android:text="@string/btn_go_to_rxjava_async_basics_activity"/>

    <Button
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/btn_go_to_rxjava_operators_activity"
        android:text="@string/btn_go_to_rxjava_operators_activity"/>


</LinearLayout>
