<?xml version="1.0" encoding="utf-8"?>

<LinearLayout android:id="@+id/root_view"
              xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              tools:context="de.xappo.myrxjava.rxjava.RxJavaReceiveActivity">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_go_to_rx_java_emit_sequentially"
        android:text="@string/btn_go_to_rx_java_emit_sequentially"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_receive_date_manually"
        android:text="@string/btn_receive_date_manually"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textview_date"
        tools:text="@string/textview_date"
        />
</LinearLayout>
